[gd_scene load_steps=42 format=2]

[ext_resource path="res://Example/Map1/Scripts/scr_player.gd" type="Script" id=1]
[ext_resource path="res://Example/Map1/Scripts/scr_ui.gd" type="Script" id=2]
[ext_resource path="res://Example/Map1/Scenes/env_map1.tres" type="Environment" id=3]
[ext_resource path="res://Example/Map1/Sounds/sfx_waterstep.wav" type="AudioStream" id=4]
[ext_resource path="res://Example/Map1/Materials/mat_default.tres" type="Material" id=5]
[ext_resource path="res://Example/Map1/Models/debug_map.obj" type="ArrayMesh" id=6]
[ext_resource path="res://Example/Map1/Models/debug_cube.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Example/Map1/Models/debug_npc.obj" type="ArrayMesh" id=8]
[ext_resource path="res://GodotRetro/Other/Images/white.png" type="Texture" id=9]
[ext_resource path="res://GodotRetro/Other/Images/CRT Frame.png" type="Texture" id=10]
[ext_resource path="res://GodotRetro/Screen Shaders/VHS.shader" type="Shader" id=11]
[ext_resource path="res://GodotRetro/Screen Shaders/Aditional Shaders/B&W.shader" type="Shader" id=12]
[ext_resource path="res://GodotRetro/Screen Shaders/Aditional Shaders/Grain.shader" type="Shader" id=13]
[ext_resource path="res://GodotRetro/Screen Shaders/Aditional Shaders/ColorPrecission.shader" type="Shader" id=14]
[ext_resource path="res://GodotRetro/Screen Shaders/TV.shader" type="Shader" id=15]
[ext_resource path="res://GodotRetro/Screen Shaders/VHSGlitch.shader" type="Shader" id=16]
[ext_resource path="res://GodotRetro/Screen Shaders/VHSPause.shader" type="Shader" id=17]
[ext_resource path="res://GodotRetro/Screen Shaders/VHSSimpleGlitch.shader" type="Shader" id=18]
[ext_resource path="res://GodotRetro/Other/Fonts/font_vcr_csd_mono.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://GodotRetro/Other/Fonts/font_vcr_osd_mono.tres" type="DynamicFont" id=20]
[ext_resource path="res://Example/Map1/Sounds/mus_restlessdreams.wav" type="AudioStream" id=21]
[ext_resource path="res://GodotRetro/Screen Shaders/Aditional Shaders/LensDistortion.shader" type="Shader" id=22]
[ext_resource path="res://GodotRetro/Screen Shaders/Aditional Shaders/SimpleGrain.shader" type="Shader" id=23]
[ext_resource path="res://GodotRetro/Screen Shaders/Aditional Shaders/BetterCC.shader" type="Shader" id=24]
[ext_resource path="res://GodotRetro/Screen Shaders/Aditional Shaders/Sharpness.shader" type="Shader" id=25]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.5

[sub_resource type="Animation" id=2]
resource_name = "anm_idle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player_body/player_head/player_cam:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.1, -0.5 ), Vector3( 0, -0.1, -0.5 ), Vector3( 0, 0.1, -0.5 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("player_body/player_foot/sfx_footstep")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "anm_walking"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player_body/player_head/player_cam:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.15, -0.5 ), Vector3( 0, -0.15, -0.5 ), Vector3( 0, 0.15, -0.5 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("player_body/player_foot/sfx_footstep")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="DynamicFont" id=4]
size = 11
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 19 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 12 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 14 )
shader_param/SCREEN_WIDTH = 320.0
shader_param/COLOR_FACTOR = 7.0

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 13 )
shader_param/screen_size = Vector2( 320, 200 )
shader_param/colored = false
shader_param/color_amount = 0.6
shader_param/grain_amount = 0.025
shader_param/grain_size = 1.6
shader_param/lum_amount = 1.3

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 23 )

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 24 )
shader_param/Shadows = Vector3( 0, 0, 0.152 )
shader_param/Midtones = Vector3( 0, 0, 0 )
shader_param/Hilights = Vector3( 0.052, 0.059, 0 )

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 25 )
shader_param/sharpen_amount = 3.0

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 15 )
shader_param/vertJerkOpt = 1.0
shader_param/vertMovementOpt = 1.0
shader_param/bottomStaticOpt = 1.0
shader_param/scalinesOpt = 1.0
shader_param/rgbOffsetOpt = 0.1
shader_param/horzFuzzOpt = 1.0

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 11 )
shader_param/tape_wave_amount = 0.005
shader_param/tape_crease_amount = 10.0
shader_param/color_displacement = 0.7
shader_param/lines_velocity = 0.1

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 16 )
shader_param/_ScanLineJitter = 0.25
shader_param/_VerticalJump = 0.01
shader_param/_HorizontalShake = 0.0
shader_param/_ColorDrift = 0.1

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 17 )
shader_param/shake_amount_x = 322.103
shader_param/shake_amount_y = 261.425
shader_param/white_hlines = 50.0
shader_param/white_vlines = 80.0

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 18 )
shader_param/range = 0.03
shader_param/noiseQuality = 250.0
shader_param/noiseIntensity = 0.007
shader_param/offsetIntensity = 0.01
shader_param/colorOffsetIntensity = 0.2

[sub_resource type="ShaderMaterial" id=16]
shader = ExtResource( 22 )
shader_param/show_curvature = true
shader_param/curvature_x_amount = 4.5
shader_param/curvature_y_amount = 3.0

[node name="scn_map1" type="Spatial"]

[node name="Map" type="Node" parent="."]

[node name="debug_map" type="CSGMesh" parent="Map"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 5 )
use_collision = true
mesh = ExtResource( 6 )
material = ExtResource( 5 )

[node name="Player" type="Node" parent="."]

[node name="player_main" type="KinematicBody" parent="Player"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -8.22059, 2.02321, 6.87202 )
script = ExtResource( 1 )

[node name="player_colision" type="CollisionShape" parent="Player/player_main"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="player_body" type="Spatial" parent="Player/player_main"]

[node name="player_head" type="Spatial" parent="Player/player_main/player_body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0 )

[node name="player_cam" type="Camera" parent="Player/player_main/player_body/player_head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, -0.5 )
environment = ExtResource( 3 )
current = true

[node name="player_foot" type="Spatial" parent="Player/player_main/player_body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="sfx_footstep" type="AudioStreamPlayer" parent="Player/player_main/player_body/player_foot"]
stream = ExtResource( 4 )
volume_db = -6.42
bus = "SFX"

[node name="player_anm" type="AnimationPlayer" parent="Player/player_main"]
anims/anm_idle = SubResource( 2 )
anims/anm_walking = SubResource( 3 )

[node name="Objects" type="Node" parent="."]

[node name="Cubes" type="Node" parent="Objects"]

[node name="debug_cube" type="CSGMesh" parent="Objects/Cubes"]
transform = Transform( 0.970119, 0.00493029, -0.24258, -0.00444893, 0.999987, 0.00253208, 0.24259, -0.00137719, 0.970128, -11.1506, 1.92377, 17.2825 )
use_collision = true
mesh = ExtResource( 7 )
material = ExtResource( 5 )

[node name="debug_cube2" type="CSGMesh" parent="Objects/Cubes"]
transform = Transform( 0.300893, 0.0023498, -0.399321, -0.00222447, 0.499993, 0.00126604, 0.399322, 0.00101467, 0.3009, -9.31175, 1.42151, 17.6184 )
use_collision = true
mesh = ExtResource( 7 )
material = ExtResource( 5 )

[node name="NPCs" type="Node" parent="Objects"]

[node name="debug_npc" type="CSGMesh" parent="Objects/NPCs"]
transform = Transform( 0.676708, -0.0126336, 0.178624, 0.0132812, 0.699874, -0.000814963, -0.178577, 0.00417691, 0.676826, -13.8789, 0.795216, -6.24269 )
use_collision = true
mesh = ExtResource( 8 )
material = ExtResource( 5 )

[node name="debug_npc2" type="CSGMesh" parent="Objects/NPCs"]
transform = Transform( -0.284019, 0.00464477, -0.639775, 0.0132812, 0.699874, -0.000814941, 0.639653, -0.0124692, -0.284056, -3.87888, 0.795216, -6.24269 )
use_collision = true
mesh = ExtResource( 8 )
material = ExtResource( 5 )

[node name="mus_restlessdreams" type="AudioStreamPlayer" parent="Objects"]
stream = ExtResource( 21 )
volume_db = -9.649
autoplay = true
bus = "MUS"

[node name="Data" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Data"]
environment = ExtResource( 3 )

[node name="UI" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="UI" type="Control" parent="UI/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State" type="Label" parent="UI/CanvasLayer/UI"]
margin_left = 12.5
margin_top = 12.0
margin_right = 57.5
margin_bottom = 27.0
custom_fonts/font = ExtResource( 20 )
text = ">PLAY"

[node name="layer_1" type="Label" parent="UI/CanvasLayer/UI"]
margin_left = 12.5
margin_top = 154.5
margin_right = 129.5
margin_bottom = 164.5
custom_fonts/font = SubResource( 4 )
text = "SSS Layer 1 :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layer_2" type="Label" parent="UI/CanvasLayer/UI"]
margin_left = 12.5
margin_top = 175.5
margin_right = 129.5
margin_bottom = 185.5
custom_fonts/font = SubResource( 4 )
text = "SSS Layer 2 :"

[node name="VHS" type="Control" parent="UI/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shader" type="Node" parent="UI/CanvasLayer/VHS"]

[node name="SSS Layer 1" type="BackBufferCopy" parent="UI/CanvasLayer/VHS/Shader"]
position = Vector2( 160, 100 )
scale = Vector2( 1.6, 1 )
copy_mode = 2

[node name="SSS B&W" type="TextureRect" parent="UI/CanvasLayer/VHS/Shader/SSS Layer 1"]
visible = false
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = -100.0
margin_bottom = -100.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSS ColorPrecision" type="TextureRect" parent="UI/CanvasLayer/VHS/Shader/SSS Layer 1"]
visible = false
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = -100.0
margin_bottom = -100.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSS Grain" type="TextureRect" parent="UI/CanvasLayer/VHS/Shader/SSS Layer 1"]
visible = false
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = -100.0
margin_bottom = -100.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSS SGrain" type="TextureRect" parent="UI/CanvasLayer/VHS/Shader/SSS Layer 1"]
visible = false
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = -100.0
margin_bottom = -100.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSS BCC" type="TextureRect" parent="UI/CanvasLayer/VHS/Shader/SSS Layer 1"]
visible = false
material = SubResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = -100.0
margin_bottom = -100.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSS Sharpness" type="TextureRect" parent="UI/CanvasLayer/VHS/Shader/SSS Layer 1"]
visible = false
material = SubResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = -100.0
margin_bottom = -100.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSS Layer 2" type="BackBufferCopy" parent="UI/CanvasLayer/VHS/Shader"]
position = Vector2( 160, 100 )
scale = Vector2( 1.6, 1 )
copy_mode = 2

[node name="SSS TV" type="TextureRect" parent="UI/CanvasLayer/VHS/Shader/SSS Layer 2"]
visible = false
material = SubResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = -100.0
margin_bottom = -100.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSS VHS" type="TextureRect" parent="UI/CanvasLayer/VHS/Shader/SSS Layer 2"]
visible = false
material = SubResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = -100.0
margin_bottom = -100.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSS VHSGlitch" type="TextureRect" parent="UI/CanvasLayer/VHS/Shader/SSS Layer 2"]
visible = false
material = SubResource( 13 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = -100.0
margin_bottom = -100.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSS VHSPause" type="TextureRect" parent="UI/CanvasLayer/VHS/Shader/SSS Layer 2"]
visible = false
material = SubResource( 14 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = -100.0
margin_bottom = -100.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSS VHSSimpleGlitch" type="TextureRect" parent="UI/CanvasLayer/VHS/Shader/SSS Layer 2"]
visible = false
material = SubResource( 15 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = -100.0
margin_bottom = -100.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSS Layer 3" type="BackBufferCopy" parent="UI/CanvasLayer/VHS/Shader"]
position = Vector2( 160, 100 )
scale = Vector2( 1.6, 1 )
copy_mode = 2

[node name="SSS LD" type="TextureRect" parent="UI/CanvasLayer/VHS/Shader/SSS Layer 3"]
visible = false
material = SubResource( 16 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = -100.0
margin_bottom = -100.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="Node" parent="UI/CanvasLayer/VHS"]

[node name="CRT Frame" type="TextureRect" parent="UI/CanvasLayer/VHS/Frame"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -3.05176e-05
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
